--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ javafx {
 }
 
 dependencies {
+    implementation('com.fazecast:jSerialComm:3.0.0')
     implementation('org.controlsfx:controlsfx:11.2.1')
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
