--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -17,7 +17,7 @@ on:
   pull_request:
     branches: [ "master" ]
   schedule:
-    - cron: '15 23 * * 0'
+    - cron: '0 7 * * 1'
 
 jobs:
   analyze:
@@ -85,12 +85,8 @@ jobs:
     - if: matrix.build-mode == 'manual'
       shell: bash
       run: |
-        echo 'If you are using a "manual" build mode for one or more of the' \
-          'languages you are analyzing, replace this with the commands to build' \
-          'your code, for example:'
-        echo '  make bootstrap'
-        echo '  make release'
-        exit 1
+        make bootstrap
+        make release
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
