--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
 .gradle
 build/
+logs/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea
 *.iws
 *.iml
 *.ipr
 out/
+!.idea/cssdialects.xml
+!.idea/copyright/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
