--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,6 @@ ext {
     junitVersion = '5.12.0'
 }
 
-sourceCompatibility = '21'
-targetCompatibility = '21'
-
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
@@ -47,7 +44,7 @@ test {
 }
 
 jlink {
-    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
+    imageZip = project.file("/distributions/app-${javafx.platform.classifier}.zip")
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
         name = 'app'
