--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+//file:noinspection SpellCheckingInspection
 plugins {
     id 'java'
     id 'application'
@@ -34,6 +35,7 @@ javafx {
 dependencies {
     implementation('com.fazecast:jSerialComm:2.11.0')
     implementation('org.controlsfx:controlsfx:11.2.1')
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
