--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,11 @@
+//file:noinspection SpellCheckingInspection
+
+pluginManagement {
+    plugins {
+        id 'org.jetbrains.kotlin.jvm' version '2.1.10'
+    }
+}
+plugins {
+    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.8.0'
+}
 rootProject.name = "PinguinTerm"
