--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
+//file:noinspection SpellCheckingInspection
 plugins {
     id 'java'
     id 'application'
     id 'org.javamodularity.moduleplugin' version '1.8.15'
     id 'org.openjfx.javafxplugin' version '0.1.0'
     id 'org.beryx.jlink' version '3.1.1'
+    id 'org.jetbrains.kotlin.jvm'
 }
 
 group 'nl.pinguinlars'
@@ -17,8 +19,13 @@ ext {
     junitVersion = '5.12.1'
 }
 
-sourceCompatibility = '21'
-targetCompatibility = '21'
+sourceSets {
+    main {
+        java {
+            srcDirs = ['src/main/java', 'src/main/kotlin'] // Add Kotlin source directory
+        }
+    }
+}
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
@@ -37,9 +44,11 @@ javafx {
 dependencies {
     implementation('com.fazecast:jSerialComm:2.11.0')
     implementation('org.controlsfx:controlsfx:11.2.2')
-
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 test {
@@ -47,7 +56,7 @@ test {
 }
 
 jlink {
-    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
+    imageZip = project.file("/distributions/app-${javafx.platform.classifier}.zip")
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
         name = 'app'
@@ -61,4 +70,7 @@ jar {
     manifest {
         attributes 'Main-Class': application.mainClass
     }
+}
+kotlin {
+    jvmToolchain(21)
 }
