--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,4 +5,6 @@ updates:
     schedule:
       interval: "weekly"
     groups:
-      applies-to: "version-updates"
+      version-updates:
+        patterns:
+          - "version-update"
